fixed icon gaps and added funcnality that If I click on a social icon it will open on a new tab

--- a/style.css
+++ b/style.css
@@ -311,8 +311,10 @@ main section {
     justify-content: space-around;
 }
 
-.social-icons {
-    justify-content: space-around;
+.social-icons a{
+    /* justify-content: space-around;
+     */
+    padding-right: 10px;
 }
 
 /* Footer section end */
